Avoid using deprecated reflection API.